servitus new refactoring